# elastic_min

./: .gitignore  README.md  bundle-macos.sh  index.html  package-lock.json  package.json  vite.config.ts
design/: index.html
docs/superpowers/plans/: 2026-07-11-builtin-semantic-themes.md  2026-07-11-icon-system.md  2026-07-11-internal-macos-bundle.md  2026-07-15-ai-chat-sessions.md  2026-07-20-documents-search-shortcuts.md
docs/superpowers/specs/: 2026-07-11-builtin-semantic-themes-design.md  2026-07-11-icon-system-design.md  2026-07-11-internal-macos-bundle-design.md  2026-07-15-ai-chat-sessions-design.md  (+1 more)
src/: App.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AiChat.tsx  CommandPalette.tsx  Dialog.tsx  DiffModal.tsx  Inspector.tsx  ResizeHandles.tsx  Sidebar.tsx  Statusbar.tsx  TabsBar.tsx  Titlebar.tsx  Toast.tsx
src/components/views/: DocsView.tsx  (+13 more)
src/lib/: activeQuery.test.mjs  activeQuery.ts  ai.ts  aiSessions.ts  documentSearch.test.mjs  documentSearch.ts  es.ts  format.ts  monaco.ts  persist.ts  queries.ts  runQuery.ts  tabs.test.mjs  themeContract.ts  themes.test.mjs  themes.ts  types.ts
src/styles/: base.css  components.css  layout.css  themes.css  tokens.css  views.css
src/ui/: Badge.tsx  Combobox.tsx  ContextMenu.tsx  Icon.tsx  JsonEditor.tsx  JsonResponseViewer.tsx  JsonView.tsx  ToolButton.tsx  comboboxSelection.test.mjs  comboboxSelection.ts  jsonResponseViewer.test.mjs  pressable.ts
tests/: aiSessions.test.mjs
(+1 files in other folders)
